--- a/personal/llm-2023.md
+++ b/personal/llm-2023.md
@@ -2,7 +2,7 @@
 
 Minulta on viime aikoina kyselty [töissä](https://csc.fi/) ja muutenkin suurista kielimalleista, eli niistä jutuista joihin ChatGPT perustuu. Yhtäkkiä tuntuu tapahtuneen jotain suurta, ja ihmisiä kiinnostaa tietää, mikä se asia on, voisimmeko me tehdä sen saman jutun, mitä se tarkoittaa, ja mitä tapahtuu seuraavaksi. Tässä pieni dialogimuotoinen katsaus.
 
-## Kehitys tuntuu yhtäkkiä niin kauhean nopealta. Äsken tulivat kuvia generoivat DALL-E ja Midjourney, nyt ällistyttävän kyvykkäästi keskusteleva ja järkevän oloinen ChatGPT ja Microsoftin Bing-lisäosa. Githubin Copilot oli entisestään järkyttävän hyvä kirjoittamaan koodia. Mitä tapahtuu?
+## Kehitys tuntuu yhtäkkiä niin kauhean nopealta. Äsken tulivat kuvia generoivat DALL‑E ja Midjourney, nyt ällistyttävän kyvykkäästi keskusteleva ja järkevän oloinen ChatGPT ja Microsoftin Bing-lisäosa. Githubin Copilot oli entisestään järkyttävän hyvä kirjoittamaan koodia. Mitä tapahtuu?
 
 Kehitys on tosiaan yhtäkkiä aivan pystysuoraa, edistysaskeleita tulee yksi toisensa perään. Jossain määrin nyt kerätään hedelmiä aiemmin tapahtuneesta tieteellisestä ja teknologisesta kehityksestä, jossain määrin alkaa näkyä tekoälyn kehittämiseen valjastetut suuret pääomat.
 
