--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -1,6 +1,6 @@
 # Suuret kielimallit FAQ
 
-Minulta on viime aikoina kyselty [töissä](https://csc.fi/) ja muutenkin suurista kielimalleista, eli niistä jutuista joihin ChatGPT perustuu. Yhtäkkiä tuntuu tapahtuneen jotain suurta, ja ihmisiä kiinnostaa tietää, mikä se asia on, voisimmeko me tehdä sen saman jutun, mitä se tarkoittaa, ja mitä tapahtuu seuraavaksi. Tässä pieni dialogimuotoinen katsaus.
+Minulta on viime aikoina kyselty [töissä](https://csc.fi/) ja muutenkin suurista kielimalleista, eli niistä jutuista joihin ChatGPT perustuu. Yhtäkkiä tuntuu tapahtuneen jotain suurta, ja ihmisiä kiinnostaa tietää, mikä se asia on, voisimmeko me tehdä sen saman jutun, mitä se tarkoittaa, ja mitä tapahtuu seuraavaksi. Tässä omia vastauksiani joihinkin kysymyksiin.
 
 ## Kehitys tuntuu yhtäkkiä niin kauhean nopealta. Äsken tulivat kuvia generoivat DALL‑E ja Midjourney, nyt ällistyttävän kyvykkäästi keskusteleva ja järkevän oloinen ChatGPT ja Microsoftin Bing-lisäosa. Githubin Copilot oli entisestään järkyttävän hyvä kirjoittamaan koodia. Mitä tapahtuu?
 
