--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -8,7 +8,7 @@ Kehitys on tosiaan yhtäkkiä aivan pystysuoraa, edistysaskeleita tulee yksi toi
 
 Ensiksikin, uusimmat kuvia generoivat järjestelmät ja uusimmat suuriin kielimalleihin perustuvat järjestelmät perustuvat hieman erilaisiin edistysaskeleisiin.
 
-DALL-E:n viimeinen käsittelyvaihe on varsin aktiivista laskentaa, iteratiivinen vaihe jossa sille annetaan alkukuva täynnä satunnaista kuvaa, ja sitä pyydetään vaihe vaiheelta vähentämään kohinan määrää. Kohinasta paljastuu "alkuperäinen" kuva (jota ei oikeasti ole olemassa), jossa on kuvattuna esimerkiksi Andromedan galaksi ja Charlie Chaplin heittämässä tikkaa kesämökillä. Siksi tällaisten mallien tarjoaminen on verraten kallista, ja joutuu yleensä maksamaan saadakseen generoitua enemmän kuin muutaman kuvan päivässä.
+DALL-E:n viimeinen käsittelyvaihe on varsin aktiivista laskentaa, iteratiivinen vaihe jossa sille annetaan alkukuva täynnä satunnaista kohinaa, ja sitä pyydetään vaihe vaiheelta vähentämään kohinan määrää. Kohinasta paljastuu "alkuperäinen" kuva (jota ei oikeasti ole olemassa), jossa on kuvattuna esimerkiksi Andromedan galaksi ja Charlie Chaplin heittämässä tikkaa kesämökillä. Siksi tällaisten mallien tarjoaminen on verraten kallista, ja joutuu yleensä maksamaan saadakseen generoitua enemmän kuin muutaman kuvan päivässä.
 
 ChatGPT tuottaa suoraviivaisemmin todennäköisiä jatkoja sille tekstikontekstille, joka sillä on käytössään. Konteksti on siihenastinen käyttäjän ja sen itsensä kirjoittama teksti, lisättynä jollain aloitussyötteellä tyyliin "Olet keskusteleva kielimalli joka avuliaasti vastaa käyttäjien kysymyksiin".
 
