--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -22,7 +22,7 @@ Teoriassa olemme tienneet jo pitkään, miten voisi saada tietokoneet oppimaan m
 
 Jotta voitaisiin saada jotain aikaan ennen universumin lämpökuolemaa, kokeiltiin erilaisia tapoja rajoittaa näiden verkkojen kytkentöjä, jotta voitaisiin optimoida tehtävän kannalta kaikkein oleellisimpia asioita. Kutsun näitä verkkojen arkkitehtuurissa tapahtuneita muutoksia _tieteellisiksi_ edistysaskeleiksi, vaikka eivät ne oikeasti kovin tieteellisiä ole olleet. Tyypillisesti otettiin inspiraatiota jostain biologisten hermostojen toimintaperiaatteesta, pitkälle kehittyneestä tilastotieteen alan matematiikasta, signaalikäsittelystä tai muusta, ja testattu josko sillä saataisiin parempia tuloksia kuin ilman sitä.
 
-Näin keksittiin konvoluutioverkot (CNN), jolla saatiin verkot tehokkaasti oppimaan paikallisia ilmiöitä, kuten kuvien tekstuureja, ja yleistämään niitä yhä abstraktimmalle tasolle. Se oli muutos arkkitehtuurissa, joka auttoi sekä kapasiteetti- että yleistysongelmassa. Tai dropout, jossa satunnaisesti sammutetaan osa verkosta oppimisen aikana pois päältä, jotta loppuosa verkosta saataisiin oppimaan jotain uutta. Se oli _optimointiin_ liittyvä edistysaskel. Optimointi on se vaihe, jossa verkko opetetaan tekemään sitä, mitä siltä pyydetään. Tai _skip connection_, jolla kytkettiin monikerroksisten verkkojen eri kerroksia yhteen, jotta ylemmän tason rakenteet voisivat käyttää hyödykseen alempien tasojen tietoa ilman että sitä tarvitsisi säilyttää jokaisessa välissä olevassa kerroksessa. Kikkoja, enemmän ja vähemmän perusteltuja.
+Näin keksittiin konvoluutioverkot (CNN), jolla saatiin verkot tehokkaasti oppimaan paikallisia ilmiöitä, kuten kuvien tekstuureja, ja yleistämään niitä yhä abstraktimmalle tasolle. Se oli muutos arkkitehtuurissa, joka auttoi sekä kapasiteetti- että yleistysongelmassa. Tai _dropout_, jossa satunnaisesti sammutetaan osa verkosta oppimisen aikana pois päältä, jotta loppuosa verkosta saataisiin oppimaan jotain uutta. Se oli _optimointiin_ liittyvä edistysaskel. Optimointi on se vaihe, jossa verkko opetetaan tekemään sitä, mitä siltä pyydetään. Tai _skip connection_, jolla kytkettiin monikerroksisten verkkojen eri kerroksia yhteen, jotta ylemmän tason rakenteet voisivat käyttää hyödykseen alempien tasojen tietoa ilman että sitä tarvitsisi säilyttää jokaisessa välissä olevassa kerroksessa. Kikkoja, enemmän ja vähemmän perusteltuja.
 
 ### Tekniset edistysaskeleet
 
