--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -58,10 +58,14 @@ Lisäksi on näyttöä siitä, että valtavien kielimallien syövereissä tapaht
 
 ## Miksi ChatGPT osaa suomea niin hyvin?
 
-Täysin tahattomasti, siksi, että sen aineistossakin on kohtalaisen paljon Internetistä kerättyä suomen kieltä. Se osaa suomea jopa paremmin kuin olisi mahdollista pelkästään suomenkielisen aineiston perusteella, koska se hyödyntää kielten yhteisiä säännöllisiä rakenteita ja ihmisille yhteisen käsitteistön ja logiikan rakennetta.
+Luultavasti siksi, että sen aineistossakin on kohtalaisen paljon Internetistä kerättyä suomen kieltä. Se on siis puhtaasti aineiston sivutuote, ei tarkoituksella kehitetty ominaisuus. Olisi pitänyt itse asiassa nähdä ylimääräistä vaivaa, että se *ei* osaisi suomea. Se osaa suomea jopa paremmin kuin olisi mahdollista pelkästään suomenkielisen aineiston perusteella, koska se hyödyntää kielten yhteisiä säännöllisiä rakenteita ja ihmisille yhteisen käsitteistön ja logiikan rakennetta.
+
+OpenAI ei ole kuitenkaan kovin avoimesti (hmm...) kertonut toteutuksensa yksityiskohdista, ja voi tietysti olla, että mukana on myös erillinen konekäännöskomponentti. Sen ei kuitenkaan pitäisi olla välttämätöntä.
 
 ## Voisimmeko me tehdä tällaisen?
 
 TurkuNLP [tekee](https://turkunlp.org/gpt3-finnish) jo suomenkielistä GPT-mallia CSC:n järjestelmillä. En tiedä, millä aineistoilla tarkalleen. Tiedän myös joitain pienempien, yksittäisten tahojen vastaavia hankkeita. Kiinnostus tällaisten mallien käyttöönottoon ja hienosäätöön tuntuu olevan suurta.
 
-On arvioitu, että mallien kehittämisessä tulevat pian vastaan käyttökelpoisen aineiston määrän rajat. GPT-3:n käyttämän aineiston voisi ehkä enää "vain" kymmenkertaistaa. Suomenkielistä aineistoa on tietenkin verrattoman paljon vähemmän. Luultavasti tekijänoikeuksilla suojatun materiaalin käyttäminen enemmän tai vähemmän luvattomasti on välttämätöntä. Jos sellaista saa hankittua, ei pitäisi olla juridinen ongelma käyttää sitä, koska malli ei tulisi sellaisenaan kyseistä aineistoa sisältämään.
+On arvioitu, että mallien kehittämisessä tulevat pian vastaan käyttökelpoisen aineiston määrän rajat. GPT-3:n käyttämän aineiston voisi ehkä enää "vain" kymmenkertaistaa. Suomenkielistä aineistoa on tietenkin verrattoman paljon vähemmän. Luultavasti tekijänoikeuksilla suojatun materiaalin käyttäminen enemmän tai vähemmän luvattomasti on välttämätöntä. Jos sellaista saa hankittua, ei _pitäisi_ olla juridinen ongelma käyttää sitä, jos malli ei sellaisenaan toistaisi kyseistä aineistoa generoidessaan tekstiä. [Ainakin tutkimuskäyttöön](https://www.eduskunta.fi/FI/naineduskuntatoimii/kirjasto/aineistot/kotimainen_oikeus/LATI/Sivut/tekijanoikeuslain-uudistus-dms-direktiivin-toimeenpano.aspx). Riittävän spesifin materiaalin kohdalla näin tosin voi käydä, kuten ollaan huomattu Copilotin kohdalla.
+
+Kysymystä tekijänoikeuden suojan rikkomisesta käsitellään jo nyt oikeudessa kuvagenerointimallien osalta, ja näin voi käydä myös kielimallin kohdalla.
