--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -69,3 +69,5 @@ TurkuNLP [tekee](https://turkunlp.org/gpt3-finnish) jo suomenkielistä GPT-malli
 On arvioitu, että mallien kehittämisessä tulevat pian vastaan käyttökelpoisen aineiston määrän rajat. GPT-3:n käyttämän aineiston voisi ehkä enää "vain" kymmenkertaistaa. Suomenkielistä aineistoa on tietenkin verrattoman paljon vähemmän. Luultavasti tekijänoikeuksilla suojatun materiaalin käyttäminen enemmän tai vähemmän luvattomasti on välttämätöntä. Jos sellaista saa hankittua, ei _pitäisi_ olla juridinen ongelma käyttää sitä, jos malli ei sellaisenaan toistaisi kyseistä aineistoa generoidessaan tekstiä. [Ainakin tutkimuskäyttöön](https://www.eduskunta.fi/FI/naineduskuntatoimii/kirjasto/aineistot/kotimainen_oikeus/LATI/Sivut/tekijanoikeuslain-uudistus-dms-direktiivin-toimeenpano.aspx). Riittävän spesifin materiaalin kohdalla näin tosin voi käydä, kuten ollaan huomattu Copilotin kohdalla.
 
 Kysymystä tekijänoikeuden suojan rikkomisesta käsitellään jo nyt oikeudessa kuvagenerointimallien osalta, ja näin voi käydä myös kielimallin kohdalla.
+
+Valmiista kielimalleista, joita voi itse hienosäätää, mainittakoon [BLOOM](https://bigscience.huggingface.co/blog/bloom), jota ainakin jotkut suunnittelevat alustaksi suomenkielisen kielimallin jatkokehitykselle, ja Facebookin [LLaMA](https://ai.facebook.com/blog/large-language-model-llama-meta-ai/). Molempien näiden lisenssiehdot ovat varsin tiukkoja: vain tutkimuskäyttöön, kaupallinen käyttö kielletty -- BLOOMin kohdalla pitää sitoutua "vastuullisen tekoälyn" lisenssiin, ja Facebook antaa mallin käyttöön vain erillisestä anomuksesta.
