--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -71,3 +71,19 @@ On arvioitu, että mallien kehittämisessä tulevat pian vastaan käyttökelpois
 Kysymystä tekijänoikeuden suojan rikkomisesta käsitellään jo nyt oikeudessa kuvagenerointimallien osalta, ja näin voi käydä myös kielimallin kohdalla.
 
 Valmiista kielimalleista, joita voi itse hienosäätää, mainittakoon [BLOOM](https://bigscience.huggingface.co/blog/bloom), jota ainakin jotkut suunnittelevat alustaksi suomenkielisen kielimallin jatkokehitykselle, ja Facebookin [LLaMA](https://ai.facebook.com/blog/large-language-model-llama-meta-ai/). Molempien näiden lisenssiehdot ovat varsin tiukkoja: vain tutkimuskäyttöön, kaupallinen käyttö kielletty -- BLOOMin kohdalla pitää sitoutua "vastuullisen tekoälyn" lisenssiin, ja Facebook antaa mallin käyttöön vain erillisestä anomuksesta.
+
+## Miten ChatGPT saa yksityiskohtaisia tietoja itsevarmalta kuulostavaan vastaukseen, joka lopulta osoittautuu täysin paikkansa pitämättömäksi?
+
+Se "hallusinoi" niitä. Se kirjoittaa jotain todennäköistä, ei välttämättä paikkansa pitävää. Sillä ei ole systemaattista tapaa luetella, mihin tosiasioihin sen vastaus perustuu, ja tapaa tarkistaa näiden tosiasioiden paikkansapitävyys. Tällaisia työkaluja ollaan tosin paraikaa kehittämässä.
+
+Oikeastaan jännempi kysymys on se, miksei se hallusinoi koko ajan, vaan usein kertoo ihan todenmukaisesti asioista. Muotoilisin tämän niin, että se kyllä hallusinoi koko ajan (kertoilee mitä sattuu ilman todellisuuspohjaa), mutta silloin kun joku aineisto on erityisen relevanttia, joko siksi, että keskustelu liikkuu hyvin spesifissä kontekstissa josta sillä on vain muutamia aineistoja, jotka se on "opetellut ulkoa", tai koska laaja aineisto on ylivoimaisen yhdenmukaista, se "lunttaa niistä". Se pystyy luettelemaan George Orwellin romaanit oikein, mutta jos sitä pyytää luettelemaan jonkun vähemmän tunnetun henkilön teoksia, joita ehkä ei oikeasti ole kuin muutama, se saattaa pitää lyhyttä listaa epätodennäköisenä ja hallusinoida siihen jatkoksi lisää samantyyppisiä asioita.
+
+## Miksi kaiken oppimisen pitää tulla ChatGPT:lle ulkopuolelta? Miksei se voi käyttää laskentatehoa yhteyksien havaitsemiseen datansa sisällä silloinkin, kun kukaan ei kysy mitään – siis "ajatella"? 
+
+Opetusvaihe on tavallaan hyvin intensiivistä ajattelua. Sen aikana malli oppii yleistämään yhä korkeammalla abstraktiotasolla. Se luo itselleen monimutkaisen ontologian, kieliopin, logiikan, tyylivalikoiman, tietovaraston -- ilman ohjausta, vain siksi, että nämä asiat auttavat täydentämään tekstejä. Abstraktiot johtavat asioiden välisiin yhteyksiin samaan tapaan kuin ihmisillä.
+
+Ehkä parempi analogia kuin ajattelu on aikuiseksi varttuminen. On havaittu, että opetusprosessin aikana mallit tekevät useita "hyppäyksiä", uuden asian omaksumista ja integroimista toimintaansa. Tällaisia ovat esimerkiksi numeroiden "tajuaminen", logiikka (jos X niin Y, ei Z, joko X tai Y) ja eri kielten välisten yhteyksien oivaltaminen (maanantai = monday = lundi = ...).
+
+Mutta miksi ChatGPT:tä ei voi jättää generoimaan tekstiä loputtomasti, oppimaan siitä, mitä se itse generoi, ja näin keksimään jotain oikeasti uutta? Kyllä tämäntyyppisiä järjestelmiä ollaankin kehittämässä, ja tavallaan ChatGPT:n hienosäätö prosessi muistuttaakin tätä, koska sitä opetetaan toistamaan sellaisia vastauksia, joille ihmiskäyttäjät ovat antaneet korkeat pisteet. Tulevaisuudessa iso määrä Internetin tekstiä tulee olemaan tekoälyn kehittämää, ja mallien opetusaineisto tulee olemaan yhä enemmän niiden itsensä aiemmin generoimaa.
+
+Yksi ilmeinen vertaus on ihmiskunta, joka on "hallusinoinut" ison määrän kulttuuria, kieliä ja käsitteitä, joka voisi olla toisinkin -- mutta sillä on myös vahva kosketus fysikaaliseen todellisuuteen, joten se on myös luonut tieteellisen, objektiivisen maailmankuvan. ChatGPT:llä ei ole kosketusta fysikaaliseen todellisuuteen, vaan ainoastaan tekstimassaan, jonka ihmiskunta on luonut tieteellisen maailmankuvansa pohjalta.
