--- a/posts/llm-2023.md
+++ b/posts/llm-2023.md
@@ -84,6 +84,6 @@ Opetusvaihe on tavallaan hyvin intensiivistä ajattelua. Sen aikana malli oppii 
 
 Ehkä parempi analogia kuin ajattelu on aikuiseksi varttuminen. On havaittu, että opetusprosessin aikana mallit tekevät useita "hyppäyksiä", uuden asian omaksumista ja integroimista toimintaansa. Tällaisia ovat esimerkiksi numeroiden "tajuaminen", logiikka (jos X niin Y, ei Z, joko X tai Y) ja eri kielten välisten yhteyksien oivaltaminen (maanantai = monday = lundi = ...).
 
-Mutta miksi ChatGPT:tä ei voi jättää generoimaan tekstiä loputtomasti, oppimaan siitä, mitä se itse generoi, ja näin keksimään jotain oikeasti uutta? Kyllä tämäntyyppisiä järjestelmiä ollaankin kehittämässä, ja tavallaan ChatGPT:n hienosäätö prosessi muistuttaakin tätä, koska sitä opetetaan toistamaan sellaisia vastauksia, joille ihmiskäyttäjät ovat antaneet korkeat pisteet. Tulevaisuudessa iso määrä Internetin tekstiä tulee olemaan tekoälyn kehittämää, ja mallien opetusaineisto tulee olemaan yhä enemmän niiden itsensä aiemmin generoimaa.
+Mutta miksi ChatGPT:tä ei voi jättää generoimaan tekstiä loputtomasti, oppimaan siitä, mitä se itse generoi, ja näin keksimään jotain oikeasti uutta? Kyllä tämäntyyppisiä järjestelmiä ollaankin kehittämässä, ja tavallaan ChatGPT:n hienosäätövaihe muistuttaakin tätä, koska sitä opetetaan toistamaan sellaisia vastauksia, joille ihmiskäyttäjät ovat antaneet korkeat pisteet. Tulevaisuudessa iso määrä Internetin tekstiä tulee olemaan tekoälyn kehittämää, ja mallien opetusaineisto tulee olemaan yhä enemmän niiden itsensä aiemmin generoimaa.
 
 Yksi ilmeinen vertaus on ihmiskunta, joka on "hallusinoinut" ison määrän kulttuuria, kieliä ja käsitteitä, joka voisi olla toisinkin -- mutta sillä on myös vahva kosketus fysikaaliseen todellisuuteen, joten se on myös luonut tieteellisen, objektiivisen maailmankuvan. ChatGPT:llä ei ole kosketusta fysikaaliseen todellisuuteen, vaan ainoastaan tekstimassaan, jonka ihmiskunta on luonut tieteellisen maailmankuvansa pohjalta.
